--- a/src/css/frontend/showcase.scss
+++ b/src/css/frontend/showcase.scss
@@ -1,73 +1,88 @@
 @import "~@splidejs/splide/dist/css/splide.min.css";
 
-.category-showcase-slide-item {
-	display: flex;
-	flex-direction: column;
-	text-align: center;
-	align-items: center;
-	padding: 24px;
-	.item-image {
-		width: 256px;
-		height: 256px;
+
+.wcc-showcase-slider{
+	margin-bottom: 1.5rem;
+	button:focus{
+		outline: none;
 	}
-	.item-icon {
-		margin-top: 20px;
-		width: 64px;
-		height: 64px;
-	}
-	.item-button {
-		display: flex;
-		width: 217px;
-		padding: 0px 57px;
-		border: 1px solid #130F31;
-		text-decoration: none !important;
-		justify-content: center;
-		align-items: center;
-		gap: 4px;
-		color: #130F31;
-		text-align: center;
-		font-size: 16px;
-		font-style: normal;
-		font-weight: 600;
-		line-height: 24px; /* 150% */
+	p{
+		margin: 0;
 	}
 }
 
-.wcc-showcase-item{
+.wcc-showcase__slider-heading{
+	margin-bottom: 3rem;
+}
+
+.wcc-showcase__slider-body{
+}
+
+.wcc-showcase-slide-item{
 	border: 1px solid #D3D9DF;
 	border-radius: 8px;
 	padding: 24px;
-	.wcc-showcase-item__cat-thumbnails{
+	.wcc-showcase-slide-item__cat-thumbnails{
 		display: flex;
 		flex-direction: column;
 		text-align: center;
 		align-items: center;
-		.wcc-showcase-item__cat-thumbnails__image{
+		.wcc-showcase-slide-item__cat-thumbnails__image{
 			max-width: 256px;
 			max-height: 256px;
 		}
-		.wcc-showcase-item__cat-thumbnails__icon{
+		.wcc-showcase-slide-item__cat-thumbnails__icon{
 			margin-top: 20px;
 			max-width: 64px;
 			max-height: 64px;
 		}
-		.wcc-showcase-item__cat-products a {
+	}
+	.wcc-showcase-slide-item__cat-details {
+		display: flex;
+		flex-direction: column;
+		text-align: center;
+		align-items: center;
+		row-gap: 1.5rem;
+		margin-top: 10px;
+		.wcc-showcase-slide-item__cat-title a {
+			color: #130F31;
+			text-align: center;
+			font-size: 24px;
+			font-style: normal;
+			font-weight: 600;
+			line-height: 32px;
+			text-decoration: none;
+		}
+		.wcc-showcase-slide-item__sub-cat__sub-cat-list {
+			list-style: none;
+			margin: 0;
+			.wcc-showcase-slide-item__sub-cat__sub-cat-list__item a{
+				color: #130F31;
+				text-align: center;
+				font-size: 16px;
+				font-style: normal;
+				font-weight: 400;
+				line-height: 24px;
+				text-decoration: none;
+			}
+
+			.wcc-showcase-slide-item__sub-cat__sub-cat-list__item a:hover{
+				color: #D4D4D4;
+			}
+		}
+		.wcc-showcase-slide-item__cat-products a {
 			color: #130F31;
 			text-align: center;
 			font-size: 16px;
 			font-style: normal;
 			font-weight: 400;
 			line-height: 24px;
-			text-decoration-line: underline;
+			text-decoration: underline;
 		}
-	}
-
-	.wcc-showcase-item__cat-details {
-		display: flex;
-		flex-direction: column;
-		text-align: center;
-		align-items: center;
-		.wcc-showcase-item__cat-button {
+		.wcc-showcase-slide-item__cat-products a:hover {
+			color: #D4D4D4;
+		}
+		.wcc-showcase-slide-item__cat-button {
 			display: flex;
 			flex-direction: column;
 			text-align: center;
@@ -82,7 +97,6 @@
 				border-radius: 8px;
 				text-decoration: none;
 				justify-content: center;
-				align-items: center;
 				gap: 4px;
 				color: #130F31;
 				font-size: 16px;
@@ -94,11 +108,131 @@
 	}
 }
 
-.wcc-showcase__slide-arrow {
-	position: absolute;
-	top: -80px;
-	right: 80px;
+//Navigation styles.
+.wcc-showcase__navigation {
+	display: flex;
+	gap: 16px;
+	.splide__arrow--prev::before {
+		position: absolute;
+		top: 5px;
+		right: 4px;
+		content: url("../../images/right-arrow.svg");
+		transform: scaleX(-1);
+	}
+	.splide__arrow--next::before {
+		position: absolute;
+		top: 5px;
+		left: 4px;
+		content: url("../../images/right-arrow.svg");
+	}
+
+	// Navigation icon chevron style.
+	.is--navigation-chevron &{
+		.splide__arrow--prev::before {
+			right: 5px;
+			content: url("../../images/right-arrow-chevron.svg");
+		}
+		.splide__arrow--next::before {
+			left: 5px;
+			content: url("../../images/right-arrow-chevron.svg");
+		}
+	}
+
+	// Navigation Positions.
+	.is--navigation-top-right &{
+		position: absolute;
+		top: -26px;
+		right: 12px;
+		.splide__arrow{
+			position: static;
+		}
+		.wcc-showcase__slider-heading{
+			margin-bottom: 3rem!important;
+		}
+	}
+	.is--navigation-top-left &{
+		position: absolute;
+		top: -26px;
+		left: 12px;
+		.splide__arrow{
+			position: static;
+		}
+		.wcc-showcase__slider-heading{
+			margin-bottom: 3rem!important;
+		}
+	}
+	.is--navigation-bottom-center &{
+		position: relative;
+		top: 48px;
+		justify-content: space-between;
+		padding-left: 5%;
+		padding-right: 5%;
+		.splide__arrow{
+			position: static;
+		}
+		.wcc-showcase__pagination{
+			margin-top:.5rem;
+		}
+	}
+	.is--navigation-bottom-right &{
+		position: relative;
+		top: 54px;
+		justify-content: flex-end;
+		.splide__arrow{
+			position: static;
+		}
+	}
+	.is--navigation-bottom-left &{
+		position: relative;
+		top: 54px;
+		justify-content: flex-start;
+		.splide__arrow{
+			position: static;
+		}
+	}
 }
-.wcc-showcase__slider-heading {
-	max-width: 80%;
+
+//Pagination styles.
+.wcc-showcase__pagination {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-top: 1.5rem;
+	min-height: 25px;
+	text-align: center;
+	.is-active{
+		background-color: grey;
+	}
+	.splide__pagination__page{
+		background-color: grey;
+	}
+
+	.is-pagination &{
+		.splide__pagination{
+			display: block;
+		}
+	}
+
+	//Pagination Styles.
+	.is--pagination-dash-with-dots &{
+		.is-active{
+			border-radius: 10px;
+			width: 36px !important;
+			transform: none;
+		}
+	}
+	.is--pagination-only-dashes &{
+		.is-active{
+			border-radius: 10px;
+			width: 60px !important;
+			transform: none;
+		}
+		.splide__pagination__page{
+			border-radius: 10px;
+			width: 24px;
+		}
+	}
 }
+
+
+
