--- a/src/css/frontend/showcase.scss
+++ b/src/css/frontend/showcase.scss
@@ -1,5 +1,6 @@
 @import "~@splidejs/splide/dist/css/splide.min.css";
 @import "showcase-block";
+@import "showcase-grid";
 
 .wcc-showcase-slider{
 	margin-bottom: 1.5rem;
