--- a/src/css/frontend/_showcase-block.scss
+++ b/src/css/frontend/_showcase-block.scss
@@ -1,6 +1,19 @@
 // Global section style.
 .wccs-section {
 	border: 1px solid red;
+	.wccs-section__header{
+		&.text-left{
+			text-align: left;
+		}
+		&.text-center{
+			text-align: center;
+		}
+		&.text-right{
+			text-align: right;
+		}
+	}
+
+	// Layout specific style.
 	&.is-layout__block {
 		border: 1px solid green;
 	}
@@ -12,6 +25,42 @@
 	}
 }
 
+// Single category/card style
+.wccs-section__body{
+	.wccs-category{
+		// common style for every single card item
+		&.wccs-content__bottom{
+			display: flex;
+			flex-direction: column;
+		}
+		&.wccs-content__top{
+			display: flex;
+			flex-direction: column-reverse;
+		}
+		&.wccs-content__right{
+			display: flex;
+			flex-direction: row;
+		}
+		&.wccs-content__left{
+			display: flex;
+			flex-direction: row-reverse;
+		}
+		&.wccs-content__overly{
+			position: relative;
+		}
+	}
+	.wccs-entry__head{
+		img{
+			width: 100%;
+			height: auto;
+			border: 1px solid red;
+		}
+	}
+}
+
+
+
+
 // Layout style: Block.
 .is-layout__block {
 	.wccs-categories {
@@ -19,7 +68,7 @@
 		gap: 1.25rem;
 		grid-template-columns: repeat(1, 1fr);
 		.wccs-category{
-			border: 1px solid red;
+			// common style for every single card item
 		}
 		&.column__x2{
 			grid-template-columns: repeat(2, 1fr);
