Update block style

--- a/src/css/frontend/showcase.scss
+++ b/src/css/frontend/showcase.scss
@@ -1,4 +1,5 @@
 @import "~@splidejs/splide/dist/css/splide.min.css";
+@import "showcase-common";
 @import "showcase-block";
 @import "showcase-grid";
 
