--- a/src/css/frontend/_showcase-block.scss
+++ b/src/css/frontend/_showcase-block.scss
@@ -1,76 +1,3 @@
-// Global section style.
-.wccs-section {
-	border: 1px solid red;
-	.wccs-section__header{
-		&.text-left{
-			text-align: left;
-		}
-		&.text-center{
-			text-align: center;
-		}
-		&.text-right{
-			text-align: right;
-		}
-	}
-
-	// Layout specific style.
-	&.is-layout__block {
-		border: 1px solid green;
-	}
-	&.is-layout__grid {
-		border: 1px solid black;
-	}
-	&.is-layout__slide {
-		border: 1px solid blue;
-	}
-}
-
-// Single category/card style: Block.
-.is-layout__block{
-	.wccs-category{
-		// common style for every single card item
-		&.wccs-content__bottom{
-			display: flex;
-			flex-direction: column;
-		}
-		&.wccs-content__top{
-			display: flex;
-			flex-direction: column-reverse;
-		}
-		&.wccs-content__right{
-			display: flex;
-			flex-direction: row;
-		}
-		&.wccs-content__left{
-			display: flex;
-			flex-direction: row-reverse;
-		}
-		&.wccs-content__overlay{
-			position: relative;
-			.wccs-entry__content{
-				position: absolute;
-				top: 0;
-				left: 0;
-				bottom: 0;
-				right: 0;
-				padding: 1rem;
-				background-color: rgba(0, 0, 0, 0.5);
-				color: #fff!important;
-				h3{
-					color: #fff;
-				}
-			}
-		}
-	}
-	.wccs-entry__head{
-		img{
-			width: 100%;
-			height: auto;
-			border: 1px solid red;
-		}
-	}
-}
-
 // Layout style: Block.
 .is-layout__block {
 	.wccs-categories {
@@ -105,6 +32,70 @@
 	@media (max-width: 776px) {
 		.wccs-categories {
 			grid-template-columns: repeat(1, 1fr);
+		}
+	}
+}
+
+// Single category/card style: Block.
+.is-layout__block{
+	.wccs-category{
+		// common style for every single card item.
+		&.wccs-content__bottom{
+			display: flex;
+			flex-direction: column;
+		}
+		&.wccs-content__top{
+			display: flex;
+			flex-direction: column-reverse;
+		}
+		&.wccs-content__right{
+			display: flex;
+			flex-direction: row;
+			.wccs-entry__head{
+				width: 100%;
+				img{
+					height: 100%;
+				}
+			}
+			.wccs-entry__content{
+				width: 100%;
+			}
+		}
+		&.wccs-content__left{
+			display: flex;
+			flex-direction: row-reverse;
+			.wccs-entry__head{
+				width: 100%;
+				img{
+					height: 100%;
+				}
+			}
+			.wccs-entry__content{
+				width: 100%;
+			}
+		}
+		&.wccs-content__overlay{
+			position: relative;
+			.wccs-entry__content{
+				position: absolute;
+				top: 0;
+				left: 0;
+				bottom: 0;
+				right: 0;
+				padding: 1rem;
+				background-color: rgba(0, 0, 0, 0.5);
+				color: #fff!important;
+				h3{
+					color: #fff;
+				}
+			}
+		}
+	}
+	.wccs-entry__head{
+		img{
+			width: 100%;
+			height: auto;
+			border: 1px solid red;
 		}
 	}
 }
