Fix grid layout design

--- a/src/css/frontend/_showcase-common.scss
+++ b/src/css/frontend/_showcase-common.scss
@@ -37,6 +37,59 @@
 	}
 }
 
+// Content position overly card style.
+.wccs-content__overlay{
+	.wccs-entry__content {
+		&.wccs-content-position__top_left{
+			text-align: left;
+			align-items: flex-start;
+			justify-content: flex-start;
+		}
+		&.wccs-content-position__top_right{
+			text-align: right;
+			justify-content: flex-start;
+			align-items: flex-end;
+		}
+		&.wccs-content-position__top_center{
+			text-align: center;
+			justify-content: flex-start;
+			align-content: center;
+			align-items: center;
+		}
+		&.wccs-content-position__center_left{
+			text-align: left;
+			justify-content: center;
+			align-items: flex-start;
+		}
+		&.wccs-content-position__center_right{
+			text-align: right;
+			justify-content: center;
+			align-items: flex-end;
+		}
+		&.wccs-content-position__center_center{
+			text-align: center;
+			justify-content: center;
+			align-content: center;
+		}
+		&.wccs-content-position__bottom_left{
+			text-align: left;
+			justify-content: flex-end;
+			align-items: flex-start;
+		}
+		&.wccs-content-position__bottom_right{
+			text-align: right;
+			justify-content: flex-end;
+			align-items: flex-end;
+		}
+		&.wccs-content-position__bottom_center{
+			text-align: center;
+			justify-content: flex-end;
+			align-content: center;
+			align-items: center;
+		}
+	}
+}
+
 // Showcase button global style.
 .wccs-showcase-btn{
 	border: 1px solid #130F31;
