fix mobile responsive

--- a/src/css/admin/admin.scss
+++ b/src/css/admin/admin.scss
@@ -112,3 +112,6 @@
 	right: 0 !important;
 	top: 33px !important;
 }
+
+@import "../../assets/css/style.css";
+@import "../../assets/fonts/all.css";
