add heading and category title style

--- a/src/css/frontend/showcase.scss
+++ b/src/css/frontend/showcase.scss
@@ -54,12 +54,12 @@
 			margin: 0;
 		}
 		.wcc-showcase-slide-item__cat-title a {
-			color: #130F31;
-			text-align: center;
-			font-size: 1.5rem;
-			font-style: normal;
-			font-weight: 600;
-			line-height: 2rem;
+			//color: #130F31;
+			//text-align: center;
+			//font-size: 1.5rem;
+			//font-style: normal;
+			//font-weight: 600;
+			//line-height: 2rem;
 			text-decoration: none;
 		}
 		.wcc-showcase-slide-item__sub-cat__sub-cat-list {
