--- a/src/css/frontend/_showcase-slide.scss
+++ b/src/css/frontend/_showcase-slide.scss
@@ -55,7 +55,7 @@
 			left: 0;
 			bottom: 0;
 			right: 0;
-			background-color: rgba(0, 0, 0, 0.5);
+			//background-color: rgba(0, 0, 0, 0.5);
 		}
 
 		// Content placement style.
@@ -114,7 +114,7 @@
 
 	// Card details style.
 	.wccs-entry__content-inner{
-		padding: 1rem;
+		//padding: 1rem;
 	}
 	.wcc-showcase-slide-item__cat-thumbnails__icon{
 		img{
