--- a/src/css/frontend/showcase.scss
+++ b/src/css/frontend/showcase.scss
@@ -3,7 +3,7 @@
 @import "showcase-block";
 @import "showcase-grid";
 @import "showcase-slide";
-@import "../../assets/fonts/all.css";
+@import "../fonts/all.css";
 
 .wcc-showcase-slider{
 	margin-bottom: 1.5rem;
