--- a/src/css/frontend/_showcase-common.scss
+++ b/src/css/frontend/_showcase-common.scss
@@ -28,25 +28,28 @@
 // Category body class.
 .wccs-categories{
 	h1{
-		margin-bottom: 0;
+		margin-bottom: 8px;
 	}
 	h2{
-		margin-bottom: 0;
+		margin-bottom: 8px;
 	}
 	h3{
-		margin-bottom: 0;
+		margin-bottom: 8px;
 	}
 	h4{
-		margin-bottom: 0;
+		margin-bottom: 8px;
 	}
 	h5{
-		margin-bottom: 0;
+		margin-bottom: 8px;
 	}
 	h6{
-		margin-bottom: 0;
+		margin-bottom: 8px;
 	}
 	p{
-		margin-bottom: 0;
+		margin-bottom: 8px;
+	}
+	.wccs-card-button{
+		margin-top:10px;
 	}
 }
 
