fix style issue

--- a/assets/css/black-friday.scss
+++ b/assets/css/black-friday.scss
@@ -110,7 +110,7 @@
 		}
 		.halloween-footer-text {
 			float: right;
-			color: #ffffff;
+			color: #000000;
 		}
 	}
 	@media screen and (max-width: 500px )  {
